crates/test-files/fixtures/compile_errors/invalid_contract_field.fe
contract Foo {
    val: u256

    pub fn foo(self) {
        self.bar
    }
}
